# mnoisy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: proto.ipynb
src/mnoisy/: __main__.py  cli.py  commands.py  exceptions.py  image.py  utils.py
src/mnoisy/noise/: __init__.py  base.py  factory.py  msequence.py
src/mnoisy/schema/: animation_data.yml
tests/: test_grid.py  test_msequence.py
